Refactor memory services and validators; enhance modularity in chat, video, and music components; improve global data handling and websocket processing; update package structures and imports for alignment with architecture.